Contacts and Main page

--- a/finter-html/index.html
+++ b/finter-html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="uk">
 
 <head>
     <!-- Basic -->
@@ -11,14 +11,16 @@
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
-    <link rel="shortcut icon" href="images/fevicon.png" type="image/x-icon">
-    <title>Finter</title>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <title>Field Force Consulting</title>
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
 
     <!-- fonts style -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!--owl slider stylesheet -->
     <link rel="stylesheet" type="text/css"
           href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
@@ -38,7 +40,7 @@
 <body>
 <div class="hero_area">
     <div class="hero_bg_box">
-        <img src="images/hero-bg.jpg" alt="">
+        <img src="images/bigseria.jpg" alt="background">
     </div>
     <!-- header section strats -->
     <header class="header_section">
@@ -52,33 +54,33 @@
                 +38(099) 421 80 07
               </span>
                     </a>
-                    <a href="mailto: e.gorodetskaya@fieldforce.consulting">
+                    <a href="mailto:m.gronskaya@fieldforce.consulting">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
                         <span>
-                e.gorodetskaya@fieldforce.consulting
+                m.gronskaya@fieldforce.consulting
               </span>
                     </a>
                 </div>
-                <div class="social_box">
-                    <a href="">
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                    </a>
-                    <a href="">
-                        <i class="fa fa-twitter" aria-hidden="true"></i>
-                    </a>
-                    <a href="">
-                        <i class="fa fa-linkedin" aria-hidden="true"></i>
-                    </a>
-                    <a href="">
-                        <i class="fa fa-instagram" aria-hidden="true"></i>
-                    </a>
-                </div>
+                <!-- <div class="social_box">
+                     <a href="">
+                         <i class="fa fa-facebook" aria-hidden="true"></i>
+                     </a>
+                     <a href="">
+                         <i class="fa fa-twitter" aria-hidden="true"></i>
+                     </a>
+                     <a href="">
+                         <i class="fa fa-linkedin" aria-hidden="true"></i>
+                     </a>
+                     <a href="">
+                         <i class="fa fa-instagram" aria-hidden="true"></i>
+                     </a>
+                 </div>-->
             </div>
         </div>
         <div class="header_bottom">
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg custom_nav-container ">
-                    <a class="navbar-brand " href="index.html"> Finter </a>
+                    <a class="navbar-brand " href="index.html"><img src="images/mainlogo.png" alt="logo"> </a>
 
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -120,17 +122,13 @@
                             <div class="col-lg-10 col-md-11 mx-auto">
                                 <div class="detail-box">
                                     <h1>
-                                        We Provide <br>
-                                        Welding Services
+                                        РОЗВИТОК ПЕРСОНАЛУ<br>
+                                        КОМПЛЕКСНА ЕКСПЕРТИЗА<br>
+                                        ЕФЕКТИВНІ РІШЕННЯ
                                     </h1>
-                                    <p>
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio omnis fugit, sed
-                                        tempora praesentium commodi error, hic recusandae repudiandae neque ad
-                                        molestias, atque veritatis labore quae eveniet autem in
-                                    </p>
                                     <div class="btn-box">
-                                        <a href="" class="btn1">
-                                            Contact Us
+                                        <a href="contact.html" class="btn1">
+                                            Зв'язатися з нами
                                         </a>
                                     </div>
                                 </div>
@@ -209,11 +207,12 @@
     <div class="container">
         <div class="heading_container heading_center ">
             <h2 class="">
-                Our Services
+                Наші послуги
             </h2>
             <p class="col-lg-8 px-0">
-                If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything believable.
-                If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
+                Компанія Field Force Consulting надає структурну підтримку офіціальним імпортерам,  дистрибюторам та дилерським мережам. Головні напрямки – сільськогосподарське машинобудування
+та автомобільна індустрія.
+
             </p>
         </div>
         <div class="service_container">
@@ -222,105 +221,61 @@
                     <div class="item">
                         <div class="box ">
                             <div class="img-box">
-                                <img src="images/s1.png" alt=""/>
+                                <img src="./images/icons/handshake-simple-solid.svg" alt="">
                             </div>
+
                             <div class="detail-box">
                                 <h5>
-                                    Home Welding
-                                </h5>
+                                    ОСОБЛИВИЙ ПІДХІД </h5>
                                 <p>
-                                    when looking at its layout. The point of using Lorem Ipsum is
-                                    that it has a more-or-less normal
+                                    Компанія Field Force Consulting надає професійні послуги з навчання персоналу на
+                                    підприємстві, а також створює сприятливі та комфортні умови для засвоєння
+                                    матеріалу.
                                 </p>
                             </div>
                         </div>
                     </div>
+
+
                     <div class="item">
                         <div class="box ">
                             <div class="img-box">
-                                <img src="images/s4.png" alt=""/>
+                                <img src="./images/icons/book-solid.svg" alt="">
                             </div>
                             <div class="detail-box">
                                 <h5>
-                                    Machine Welding
+                                    НАШІ РІШЕННЯ
                                 </h5>
                                 <p>
-                                    when looking at its layout. The point of using Lorem Ipsum is
-                                    that it has a more-or-less normal
+                                    Під час розробки програми навчання ми прикладаємо багато зусиль для того, щоб усі
+                                    практичні завдання були цікаві та корисні.
+                                    Наші експерти завжди найдоступнішими методами пояснюють складні технології.
                                 </p>
                             </div>
                         </div>
                     </div>
+
                     <div class="item">
                         <div class="box ">
                             <div class="img-box">
-                                <img src="images/s6.png" alt=""/>
+                                <img src="./images/icons/handshake-simple-solid.svg" alt="">
                             </div>
                             <div class="detail-box">
                                 <h5>
-                                    Car Welding
+                                    КОМАНДА
                                 </h5>
-                                <p>
-                                    when looking at its layout. The point of using Lorem Ipsum is
-                                    that it has a more-or-less normal
-                                </p>
+                                <p>Ми залучаємо експертів з різних галузей, прямо чи опосередковано пов’язаних з темою
+                                    навчання, маючи на меті реалізацію проектів будь-яких ступенів скаладності.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="item">
-                        <div class="box ">
-                            <div class="img-box">
-                                <img src="images/s1.png" alt=""/>
-                            </div>
-                            <div class="detail-box">
-                                <h5>
-                                    Home Welding
-                                </h5>
-                                <p>
-                                    when looking at its layout. The point of using Lorem Ipsum is
-                                    that it has a more-or-less normal
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="box ">
-                            <div class="img-box">
-                                <img src="images/s4.png" alt=""/>
-                            </div>
-                            <div class="detail-box">
-                                <h5>
-                                    Machine Welding
-                                </h5>
-                                <p>
-                                    when looking at its layout. The point of using Lorem Ipsum is
-                                    that it has a more-or-less normal
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="box ">
-                            <div class="img-box">
-                                <img src="images/s6.png" alt=""/>
-                            </div>
-                            <div class="detail-box">
-                                <h5>
-                                    Car Welding
-                                </h5>
-                                <p>
-                                    when looking at its layout. The point of using Lorem Ipsum is
-                                    that it has a more-or-less normal
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
         <div class="btn-box">
-            <a href="">
-                Read More
+            <a href="about.html">
+                Наші послуги
             </a>
         </div>
     </div>
@@ -513,8 +468,8 @@
                         <a href="tel:+380994218007">
                             +38(099) 421 80 07
                         </a>
-                        <a href="mailto: e.gorodetskaya@fieldforce.consulting">
-                            <span>e.gorodetskaya@fieldforce.consulting</span>
+                        <a href="mailto:m.gronskaya@fieldforce.consulting">
+                            <span>m.gronskaya@fieldforce.consulting</span>
                         </a>
                     </div>
                 </div>
