--- a/finter-html/clients.html
+++ b/finter-html/clients.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="uk">
 
 <head>
   <!-- Basic -->
@@ -11,14 +11,14 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="images/fevicon.png" type="image/x-icon">
-  <title>Finter</title>
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <title>Field Force Consulting</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
   <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <!--owl slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
   <!-- nice select -->
@@ -49,10 +49,10 @@
                 +38(099) 421 80 07
               </span>
                     </a>
-                    <a href="mailto: e.gorodetskaya@fieldforce.consulting">
+                    <a href="mailto:m.gronskaya@fieldforce.consulting">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
                         <span>
-                e.gorodetskaya@fieldforce.consulting
+                m.gronskaya@fieldforce.consulting
               </span>
                     </a>
                 </div>
@@ -75,7 +75,7 @@
       <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand " href="index.html"> Finter </a>
+            <a class="navbar-brand " href="index.html"><img src="images/mainlogo.png" alt="logo"> </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class=""> </span>
