--- a/finter-html/contact.html
+++ b/finter-html/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="uk">
 
 <head>
     <!-- Basic -->
@@ -11,14 +11,16 @@
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
-    <link rel="shortcut icon" href="images/fevicon.png" type="image/x-icon">
-    <title>Finter</title>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <title>Field Force Consulting</title>
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
 
     <!-- fonts style -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!--owl slider stylesheet -->
     <link rel="stylesheet" type="text/css"
           href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
@@ -51,33 +53,31 @@
                 +38(099) 421 80 07
               </span>
                     </a>
-                    <a href="mailto: e.gorodetskaya@fieldforce.consulting">
+                    <a href="mailto:m.gronskaya@fieldforce.consulting">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <span>
-                e.gorodetskaya@fieldforce.consulting
-              </span>
+                        <span>m.gronskaya@fieldforce.consulting</span>
                     </a>
                 </div>
-                <div class="social_box">
-                    <a href="">
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                    </a>
-                    <a href="">
-                        <i class="fa fa-twitter" aria-hidden="true"></i>
-                    </a>
-                    <a href="">
-                        <i class="fa fa-linkedin" aria-hidden="true"></i>
-                    </a>
-                    <a href="">
-                        <i class="fa fa-instagram" aria-hidden="true"></i>
-                    </a>
-                </div>
+                <!--                <div class="social_box">
+                                    <a href="">
+                                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                                    </a>
+                                </div>-->
             </div>
         </div>
         <div class="header_bottom">
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg custom_nav-container ">
-                    <a class="navbar-brand " href="index.html"> Finter </a>
+                    <a class="navbar-brand " href="index.html"><img src="images/mainlogo.png" alt="logo"> </a>
 
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -121,19 +121,19 @@
                 <div class="heading_container">
                     <h1 style="font-weight: bold; font-size: 2rem">Контакти</h1>
                 </div>
-                <img style="margin: 20px 0" src="./images/logo.jpg" alt="logo">
+                <img style="margin: 20px 0" src="./images/logo.png" alt="logo">
                 <p>
                     <strong>ТОВ "ФІЛД ФОРС КОНСАЛТИНГ"</strong>
                 </p>
                 <p>
-                    Київ, Україна, 02095, вул. Княжий Затон, 9А, офіс 369.
+                    Київ, Україна, 02095, <br>вул. Княжий Затон, 9А, офіс 369.
                 </p>
                 <p><a href="tel:+380994218007">
                     +38(099) 421 80 07
                 </a></p>
 
-                <a href="mailto: e.gorodetskaya@fieldforce.consulting">
-                    <span>e.gorodetskaya@fieldforce.consulting</span>
+                <a href="mailto:m.gronskaya@fieldforce.consulting">
+                    <span>m.gronskaya@fieldforce.consulting</span>
                 </a>
             </div>
 
@@ -221,8 +221,8 @@
                         <a href="tel:+380994218007">
                             +38(099) 421 80 07
                         </a>
-                        <a href="mailto: e.gorodetskaya@fieldforce.consulting">
-                            <span>e.gorodetskaya@fieldforce.consulting</span>
+                        <a href="mailto:m.gronskaya@fieldforce.consulting">
+                            <span>m.gronskaya@fieldforce.consulting</span>
                         </a>
                     </div>
                 </div>
