--- a/finter-html/index.html
+++ b/finter-html/index.html
@@ -207,11 +207,12 @@
     <div class="container">
         <div class="heading_container heading_center ">
             <h2 class="">
-                Наші послуги
+                Наші клієнти
             </h2>
             <p class="col-lg-8 px-0">
-                Компанія Field Force Consulting надає структурну підтримку офіціальним імпортерам,  дистрибюторам та дилерським мережам. Головні напрямки – сільськогосподарське машинобудування
-та автомобільна індустрія.
+                Компанія Field Force Consulting надає структурну підтримку офіціальним імпортерам, дистрибюторам та
+                дилерським мережам. Головні напрямки – сільськогосподарське машинобудування
+                та автомобільна індустрія.
 
             </p>
         </div>
@@ -264,8 +265,9 @@
                                 <h5>
                                     КОМАНДА
                                 </h5>
-                                <p>Ми залучаємо експертів з різних галузей, прямо чи опосередковано пов’язаних з темою
-                                    навчання, маючи на меті реалізацію проектів будь-яких ступенів скаладності.</p>
+                                <p>Експерти, яких ми залучаємо – це професіонали різних сфер діяльності, що допомагають
+                                    вирішувати такі задачі, як проведення тренінгів, реалізація маркетингових заходів,
+                                    експертна оцінка процесів й спеціалістів, консалтинг тощо.</p>
                             </div>
                         </div>
                     </div>
@@ -292,18 +294,21 @@
                 <div class="detail-box pr-md-2">
                     <div class="heading_container">
                         <h2 class="">
-                            About Us
+                            Про нас
                         </h2>
                     </div>
                     <p class="detail_p_mt">
-                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                        alteration in some form, by injected humour, orThere are many variations of passages of Lorem
-                        Ipsum available, but the majority have suffered alteration in some form, by injected humour,
-                        orThere are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                        alteration in some form, by injected humour, or
-                    </p>
+                    <p>Компанія <strong>Field Force Consulting</strong> надає структурну підтримку офіціальним
+                        імпортерам, дистрибюторам
+                        та дилерським мережам. </p>
+
+                    <p><strong>Головні напрямки</strong> – сільськогосподарське машинобудування
+                        та автомобільна індустрія.</p>
+
+                    <p><strong>Принцип роботи</strong> – залучення експертів-професіоналів для розвитку бізнесу наших
+                        клієнтів</p>
                     <a href="about.html" class="">
-                        Read More
+                        Детальніше
                     </a>
                 </div>
             </div>
@@ -383,6 +388,109 @@
 </section>
 
 <!-- end team section -->
+
+
+<!-- client section -->
+
+<section class="client_section layout_padding">
+    <div class="container ">
+        <div class="heading_container heading_center">
+            <h2>
+                Наші клієнти
+            </h2>
+            <hr>
+        </div>
+        <div id="carouselExample2Controls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="row">
+                        <div class="col-lg-7 col-md-9 mx-auto">
+                            <div class="client_container ">
+                                <div class="img-box">
+                                    <img src="images/clients/renault.png" alt="Renault">
+                                </div>
+                                <div class="detail-box">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-lg-7 col-md-9 mx-auto">
+                            <div class="client_container ">
+                                <div class="img-box">
+                                    <img src="images/clients/john_deere.png" alt="John Deere">
+                                </div>
+                                <div class="detail-box">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-lg-7 col-md-9 mx-auto">
+                            <div class="client_container ">
+                                <div class="img-box">
+                                    <img src="images/clients/nissan.png" alt="Nissan">
+                                </div>
+                                <div class="detail-box">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-lg-7 col-md-9 mx-auto">
+                            <div class="client_container ">
+                                <div class="img-box">
+                                    <img src="images/clients/opel.png" alt="Opel">
+                                </div>
+                                <div class="detail-box">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-lg-7 col-md-9 mx-auto">
+                            <div class="client_container ">
+                                <div class="img-box">
+                                    <img src="images/clients/cnh.png" alt="CNH Industrial">
+                                </div>
+                                <div class="detail-box">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="carousel_btn-box">
+                <a class="carousel-control-prev" href="#carouselExample2Controls" role="button" data-slide="prev">
+            <span>
+              <i class="fa fa-arrow-left" aria-hidden="true"></i>
+            </span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExample2Controls" role="button" data-slide="next">
+            <span>
+              <i class="fa fa-arrow-right" aria-hidden="true"></i>
+            </span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- end client section -->
+
 
 <!-- contact section -->
 <section class="contact_section ">
@@ -520,7 +628,7 @@
 <footer class="footer_section">
     <div class="container">
         <p>
-            &copy; 2020-<span id="displayYear"></span> All Rights Reserved By Field Force Consulting
+            &copy; 2010-<span id="displayYear"></span> All Rights Reserved By Field Force Consulting
         </p>
     </div>
 </footer>
