--- a/finter-html/index.html
+++ b/finter-html/index.html
@@ -207,7 +207,7 @@
     <div class="container">
         <div class="heading_container heading_center ">
             <h2 class="">
-                Наші клієнти
+                Наші послуги
             </h2>
             <p class="col-lg-8 px-0">
                 Компанія Field Force Consulting надає структурну підтримку офіціальним імпортерам, дистрибюторам та
@@ -222,17 +222,18 @@
                     <div class="item">
                         <div class="box ">
                             <div class="img-box">
-                                <img src="./images/icons/handshake-simple-solid.svg" alt="">
+                                <img src="./images/icons/tractor-solid.svg" alt="icon">
                             </div>
 
                             <div class="detail-box">
                                 <h5>
-                                    ОСОБЛИВИЙ ПІДХІД </h5>
-                                <p>
-                                    Компанія Field Force Consulting надає професійні послуги з навчання персоналу на
-                                    підприємстві, а також створює сприятливі та комфортні умови для засвоєння
-                                    матеріалу.
-                                </p>
+                                    ТЕХНІЧНЕ НАВЧАННЯ ПЕРСОНАЛУ</h5>
+                                <ul>
+                                    <li>Електрика, електричне обладнання</li>
+                                    <li>Гідравліка, гідравлічне обладнання</li>
+                                    <li>Дизельне впорскування</li>
+                                    <li>Системи комфорту тощо</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -241,17 +242,19 @@
                     <div class="item">
                         <div class="box ">
                             <div class="img-box">
-                                <img src="./images/icons/book-solid.svg" alt="">
+                                <img src="./images/icons/brain-solid.svg" alt="icon">
                             </div>
                             <div class="detail-box">
                                 <h5>
-                                    НАШІ РІШЕННЯ
+                                    НАША ЕКСПЕРТИЗА
                                 </h5>
-                                <p>
-                                    Під час розробки програми навчання ми прикладаємо багато зусиль для того, щоб усі
-                                    практичні завдання були цікаві та корисні.
-                                    Наші експерти завжди найдоступнішими методами пояснюють складні технології.
-                                </p>
+                                <ul>
+                                    <li>Аналіз бізнес-процесів</li>
+                                    <li>Побудова, відновлення бізнес-процесів</li>
+                                    <li>Коучінг персоналу (персональний та груповий)</li>
+                                    <li>Діагностика персоналу</li>
+                                    <li>Розробка стандартів</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -259,15 +262,36 @@
                     <div class="item">
                         <div class="box ">
                             <div class="img-box">
-                                <img src="./images/icons/handshake-simple-solid.svg" alt="">
+                                <img src="./images/icons/globe-solid.svg" alt="icon">
                             </div>
                             <div class="detail-box">
                                 <h5>
-                                    КОМАНДА
+                                    СИСТЕМНА ІНТЕГРАЦІЯ ТА ІНТЕРНЕТ-РІШЕННЯ
                                 </h5>
-                                <p>Експерти, яких ми залучаємо – це професіонали різних сфер діяльності, що допомагають
-                                    вирішувати такі задачі, як проведення тренінгів, реалізація маркетингових заходів,
-                                    експертна оцінка процесів й спеціалістів, консалтинг тощо.</p>
+                                <ul>
+                                    <li>Система комплексного моніторингу KPI підприємства</li>
+                                    <li>Оцінка ефективності інтернет-ресурсів</li>
+                                    <li>Оптимізація системи роботи з лідами на підприємствах</li>
+                                    <li>Розробка та ведення Telegram боту для оптимізації роботи співробітників</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="box ">
+                            <div class="img-box">
+                                <img src="./images/icons/handshake-simple-solid.svg" alt="icon">
+                            </div>
+                            <div class="detail-box">
+                                <h5>
+                                    НЕЗАЛЕЖНА ОЦІНКА ПЕРСОНАЛУ
+                                </h5>
+                                <ul>
+                                    <li>Онлайн-тестування</li>
+                                    <li>Оцінка потенціалу співробітників</li>
+                                    <li>Конкурси професійного майстерства</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -314,7 +338,7 @@
             </div>
             <div class="col-md-6 px-0">
                 <div class="img-box ">
-                    <img src="images/about-img.jpg" class="box_img" alt="about img">
+                    <img src="images/seria.jpg" class="box_img" alt="about img">
                 </div>
             </div>
         </div>
@@ -329,57 +353,67 @@
     <div class="container">
         <div class="heading_container heading_center">
             <h2>
-                Our Team
+                Наша команда
             </h2>
             <p>
-                Lorem ipsum dolor sit amet, non odio tincidunt ut ante, lorem a euismod suspendisse vel, sed quam nulla
-                mauris
-                iaculis. Erat eget vitae malesuada, tortor tincidunt porta lorem lectus.
+                Експерти,яких ми залучаємо – це професіонали різних сфер діяльності, що допомагають вирішувати
+                багатоманітні задачі, такі як проведення тренінгів, реалізація маркетингових заходів, експертна оцінка
+                процесів та спеціалістів, консалтинг і багато іншого. Об’єднання їхніх зусиль для вирішення задач,
+                пов’язаних з потребами клієнтів, дозволяє реулярно проводити ефективне начання персоналу. Залежно від
+                поставленої цілі для проведення навчання FFC обирає того, хто надасть максимум корисних теоретичних та
+                практичних знань.
             </p>
         </div>
         <div class="row">
             <div class="col-md-4 col-sm-6 mx-auto">
                 <div class="box">
                     <div class="img-box">
-                        <img src="images/t1.jpg" alt="">
+                        <img src="images/team/vyacheslav.jpg" alt="Team">
                     </div>
                     <div class="detail-box">
-                        <h5>
-                            Martin Anderson
+                        <h5 class="mb-3">
+                            Шостак Вячеслав
                         </h5>
-                        <h6 class="">
-                            supervisor
+                        <h6 class="mb-3">
+                            УПРАВЛЯЮЧИЙ ПАРТНЕР
                         </h6>
+                        <p>Майстер-тренер, експерт в автомобільному та аграрному бізнесі, маркетингу та менеджменті
+
+                            Guest-speaker </p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6 mx-auto">
                 <div class="box">
                     <div class="img-box">
-                        <img src="images/t2.jpg" alt="">
+                        <img src="images/team/maria.jpg" alt="Team">
                     </div>
                     <div class="detail-box">
-                        <h5>
-                            Denny Butler
+                        <h5 class="mb-4">
+                            Гронська Марія
                         </h5>
-                        <h6 class="">
-                            supervisor
+                        <h6 class="mb-4">
+                            ДИРЕКТОР ПО РОБОТІ З КЛІЄНТАМИ
                         </h6>
+                        <p>Тренер-консультант <br>
+                            Спеціаліст з питань коммунікації та управлінню лояльністю клієнтів</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6 mx-auto">
                 <div class="box">
                     <div class="img-box">
-                        <img src="images/t3.jpg" alt="">
+                        <img src="images/team/cat.jpg" alt="Team">
                     </div>
                     <div class="detail-box">
-                        <h5>
-                            Nathan Mcpherson
+                        <h5 class="mb-4">
+                            Шостак Вольт
                         </h5>
-                        <h6 class="">
-                            supervisor
+                        <h6 class="mb-4">
+                            ГОЛОВНИЙ ПО МУРКЕТИНГУ
                         </h6>
+                        <p>Тренер-консультант <br>
+                            Спеціаліст з питань міміфікації та управлінню лояльністю працівників</p>
                     </div>
                 </div>
             </div>
@@ -462,6 +496,76 @@
                             <div class="client_container ">
                                 <div class="img-box">
                                     <img src="images/clients/cnh.png" alt="CNH Industrial">
+                                </div>
+                                <div class="detail-box">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-lg-7 col-md-9 mx-auto">
+                            <div class="client_container ">
+                                <div class="img-box">
+                                    <img src="images/clients/holland.png" alt="New Holland">
+                                </div>
+                                <div class="detail-box">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-lg-7 col-md-9 mx-auto">
+                            <div class="client_container ">
+                                <div class="img-box">
+                                    <img src="images/clients/backstage.png" alt="Backstage Beauty Salons">
+                                </div>
+                                <div class="detail-box">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-lg-7 col-md-9 mx-auto">
+                            <div class="client_container ">
+                                <div class="img-box">
+                                    <img src="images/clients/case.png" alt="Case IH">
+                                </div>
+                                <div class="detail-box">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-lg-7 col-md-9 mx-auto">
+                            <div class="client_container ">
+                                <div class="img-box">
+                                    <img src="images/clients/hyundai.png" alt="Hyundai">
+                                </div>
+                                <div class="detail-box">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-lg-7 col-md-9 mx-auto">
+                            <div class="client_container ">
+                                <div class="img-box">
+                                    <img src="images/clients/pottinger.png" alt="Pottinger">
                                 </div>
                                 <div class="detail-box">
                                 </div>
