contact.html edited grid

--- a/finter-html/contact.html
+++ b/finter-html/contact.html
@@ -40,7 +40,7 @@
 <body class="sub_page">
 <div class="hero_area">
     <div class="hero_bg_box">
-        <img src="images/hero-bg.jpg" alt="">
+        <img src="images/bigseria.jpg" alt="background">
     </div>
     <!-- header section strats -->
     <header class="header_section">
@@ -115,65 +115,70 @@
 <!-- contact section -->
 <section class="contact_section ">
     <div class="container">
-        <div class="row justify-content-center">
 
-            <div class="my-5 col-lg-7 col-md-12">
-                <div class="heading_container">
-                    <h1 style="font-weight: bold; font-size: 2rem">Контакти</h1>
+        <h1 style="font-weight: bold; font-size: 2rem; padding-top: 30px; text-align: center">
+            Контакти</h1>
+
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-sm-12 col-md-5">
+                    <img style="padding: 20px 0 60px 0" src="./images/logo.png" alt="logo">
+                    <p>
+                        <strong>ТОВ "ФІЛД ФОРС КОНСАЛТИНГ"</strong>
+                    </p>
+                    <p>
+                        Київ, Україна, 02095, <br>вул. Княжий Затон, 9А, офіс 369.
+                    </p>
+                    <p><a href="tel:+380994218007">
+                        +38(099) 421 80 07
+                    </a></p>
+
+                    <a href="mailto:m.gronskaya@fieldforce.consulting">
+                        <span>m.gronskaya@fieldforce.consulting</span>
+                    </a>
                 </div>
-                <img style="margin: 20px 0" src="./images/logo.png" alt="logo">
-                <p>
-                    <strong>ТОВ "ФІЛД ФОРС КОНСАЛТИНГ"</strong>
-                </p>
-                <p>
-                    Київ, Україна, 02095, <br>вул. Княжий Затон, 9А, офіс 369.
-                </p>
-                <p><a href="tel:+380994218007">
-                    +38(099) 421 80 07
-                </a></p>
-
-                <a href="mailto:m.gronskaya@fieldforce.consulting">
-                    <span>m.gronskaya@fieldforce.consulting</span>
-                </a>
-            </div>
 
 
-            <div class="col-lg-5 col-md-12">
-                <div class="form_container">
-                    <div class="heading_container heading_center">
-                        <h2>Написати нам</h2>
+                <div class="col-sm-12 col-md-7">
+                    <div class="form_container">
+                        <div class="heading_container heading_center">
+                            <h4>Написати нам</h4>
+                        </div>
+                        <form action="">
+                            <div class="form-row">
+                                <div class="form-group col">
+                                    <input type="text" class="form-control" placeholder="Ім'я та прізвище"/>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col">
+                                    <input type="text" class="form-control" placeholder="Номер телефону"/>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col">
+                                    <input type="email" class="form-control" placeholder="E-mail"/>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col">
+                                    <input type="text" class="message-box form-control" placeholder="Текст листа"/>
+                                </div>
+                            </div>
+                            <div class="btn_box">
+                                <button>
+                                    НАДІСЛАТИ
+                                </button>
+                            </div>
+                        </form>
                     </div>
-                    <form action="">
-                        <div class="form-row">
-                            <div class="form-group col">
-                                <input type="text" class="form-control" placeholder="Ім'я та прізвище"/>
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group col">
-                                <input type="text" class="form-control" placeholder="Номер телефону"/>
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group col">
-                                <input type="email" class="form-control" placeholder="E-mail"/>
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group col">
-                                <input type="text" class="message-box form-control" placeholder="Текст листа"/>
-                            </div>
-                        </div>
-                        <div class="btn_box">
-                            <button>
-                                НАДІСЛАТИ
-                            </button>
-                        </div>
-                    </form>
                 </div>
             </div>
         </div>
+
     </div>
+
+
     <!--Map-->
     <div class="container-fluid">
         <div class="row">
@@ -294,9 +299,7 @@
         integrity="sha256-Zr3vByTlMGQhvMfgkQ5BtWRSKBGa2QlspKYJnkjZTmo=" crossorigin="anonymous"></script>
 <!-- custom js -->
 <script src="js/custom.js"></script>
-<!-- Google Map -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
-<!-- End Google Map -->
+
 </body>
 
 </html>
