--- a/finter-html/index.html
+++ b/finter-html/index.html
@@ -210,16 +210,16 @@
                 Наші послуги
             </h2>
             <p class="col-lg-8 px-0">
-                Компанія Field Force Consulting надає структурну підтримку офіціальним імпортерам, дистрибюторам та
+                Компанія <strong>Field Force Consulting</strong> надає структурну підтримку офіційним імпортерам,
+                дистриб'юторам та
                 дилерським мережам. Головні напрямки – сільськогосподарське машинобудування
                 та автомобільна індустрія.
-
             </p>
         </div>
         <div class="service_container">
             <div class="carousel-wrap ">
                 <div class="service_owl-carousel owl-carousel">
-                    <div class="item">
+                    <div class="item" >
                         <div class="box ">
                             <div class="img-box">
                                 <img src="./images/icons/tractor-solid.svg" alt="icon">
@@ -251,7 +251,7 @@
                                 <ul>
                                     <li>Аналіз бізнес-процесів</li>
                                     <li>Побудова, відновлення бізнес-процесів</li>
-                                    <li>Коучінг персоналу (персональний та груповий)</li>
+                                    <li>Коучинг персоналу (персональний та груповий)</li>
                                     <li>Діагностика персоналу</li>
                                     <li>Розробка стандартів</li>
                                 </ul>
@@ -290,7 +290,7 @@
                                 <ul>
                                     <li>Онлайн-тестування</li>
                                     <li>Оцінка потенціалу співробітників</li>
-                                    <li>Конкурси професійного майстерства</li>
+                                    <li>Конкурси професійної майстерності</li>
                                 </ul>
                             </div>
                         </div>
@@ -322,15 +322,25 @@
                         </h2>
                     </div>
                     <p class="detail_p_mt">
-                    <p>Компанія <strong>Field Force Consulting</strong> надає структурну підтримку офіціальним
-                        імпортерам, дистрибюторам
-                        та дилерським мережам. </p>
+                    <p><strong>Field Force Consulting</strong> – провідний постачальник консалтингових та тренінгових B2B послуг з
+                        вузькою спеціалізацією. З 2010 р. ми надаємо комплексні послуги з оцінки, навчання (технічного
+                        та поведінкового) та розвитку персоналу.</p>
 
                     <p><strong>Головні напрямки</strong> – сільськогосподарське машинобудування
                         та автомобільна індустрія.</p>
 
                     <p><strong>Принцип роботи</strong> – залучення експертів-професіоналів для розвитку бізнесу наших
                         клієнтів</p>
+                    <p>
+                        Сучасний світ стрімко змінюється. <br>
+                        Добрі компанії встигають за змінами, але кращі - генерують ці зміни. Але неможливо стати кращою
+                        компанією, не став до цього доброю. <br>
+                        В Україні значною мірою відбулась депрофесіоналізація і, в цілому, класні хлопці й дівчата,
+                        навіть маючи вищу освіту, не досягають результативності та ефективності, яка властива кращим
+                        компаніям світу. <br>
+                        Експерти, яких залучає Field Force Consulting до роботи з клієнтами отримали багаторічний досвід
+                        практичної роботи з кращими автомобільними компаніями та компаніями виробниками
+                        сільськогосподарської техніки.</p>
                     <a href="about.html" class="">
                         Детальніше
                     </a>
@@ -356,10 +366,10 @@
                 Наша команда
             </h2>
             <p>
-                Експерти,яких ми залучаємо – це професіонали різних сфер діяльності, що допомагають вирішувати
+                Експерти, яких ми залучаємо – це професіонали різних сфер діяльності, що допомагають вирішувати
                 багатоманітні задачі, такі як проведення тренінгів, реалізація маркетингових заходів, експертна оцінка
                 процесів та спеціалістів, консалтинг і багато іншого. Об’єднання їхніх зусиль для вирішення задач,
-                пов’язаних з потребами клієнтів, дозволяє реулярно проводити ефективне начання персоналу. Залежно від
+                пов'язаних з потребами клієнтів, дозволяє регулярно проводити ефективне навчання персоналу. Залежно від
                 поставленої цілі для проведення навчання FFC обирає того, хто надасть максимум корисних теоретичних та
                 практичних знань.
             </p>
@@ -396,7 +406,7 @@
                             ДИРЕКТОР ПО РОБОТІ З КЛІЄНТАМИ
                         </h6>
                         <p>Тренер-консультант <br>
-                            Спеціаліст з питань коммунікації та управлінню лояльністю клієнтів</p>
+                            Спеціаліст з питань комунікації та управлінню лояльністю клієнтів</p>
                     </div>
                 </div>
             </div>
@@ -753,9 +763,7 @@
         integrity="sha256-Zr3vByTlMGQhvMfgkQ5BtWRSKBGa2QlspKYJnkjZTmo=" crossorigin="anonymous"></script>
 <!-- custom js -->
 <script src="js/custom.js"></script>
-<!-- Google Map -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
-<!-- End Google Map -->
+
 </body>
 
 </html>
