--- a/finter-html/about.html
+++ b/finter-html/about.html
@@ -18,7 +18,9 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
 
     <!-- fonts style -->
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!--owl slider stylesheet -->
     <link rel="stylesheet" type="text/css"
           href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
@@ -38,7 +40,7 @@
 <body class="sub_page">
 <div class="hero_area">
     <div class="hero_bg_box">
-        <img src="images/hero-bg.jpg" alt="">
+        <img src="images/bigseria.jpg" alt="background">
     </div>
     <!-- header section strats -->
     <header class="header_section">
@@ -59,20 +61,25 @@
               </span>
                     </a>
                 </div>
-                <div class="social_box">
-                    <a href="">
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                    </a>
-                    <a href="">
-                        <i class="fa fa-twitter" aria-hidden="true"></i>
-                    </a>
-                    <a href="">
-                        <i class="fa fa-linkedin" aria-hidden="true"></i>
-                    </a>
-                    <a href="">
-                        <i class="fa fa-instagram" aria-hidden="true"></i>
-                    </a>
-                </div>
+                <!--
+                social block
+                -->
+                <!--                <div class="social_box">
+                                    <a href="">
+                                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                                    </a>
+                                </div>-->
+
+
             </div>
         </div>
         <div class="header_bottom">
@@ -173,117 +180,73 @@
 <!-- info section -->
 <section class="info_section ">
     <div class="container">
-        <div class="info_top">
-            <div class="row">
-                <div class="col-md-3 ">
-                    <a class="navbar-brand" href="index.html">
-                        Finter
-                    </a>
-                </div>
-                <div class="col-md-5 ">
-                    <div class="info_contact">
-                        <a href="">
-                            <i class="fa fa-map-marker" aria-hidden="true"></i>
-                            <span>
-                  Location
-                </span>
-                        </a>
-                        <a href="">
-                            <i class="fa fa-phone" aria-hidden="true"></i>
-                            <span>
-                  +01 1234567890
-                </span>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-4 ">
-                    <div class="social_box">
-                        <a href="">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                        </a>
-                        <a href="">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                        </a>
-                        <a href="">
-                            <i class="fa fa-linkedin" aria-hidden="true"></i>
-                        </a>
-                        <a href="">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
+
         <div class="info_bottom">
             <div class="row">
-                <div class="col-lg-3 col-md-6">
+                <div class="col">
                     <div class="info_detail">
                         <h5>
-                            Company
+                            Про компанію
                         </h5>
                         <p>
-                            Randomised words which don't look even slightly believable. If you are going to use a
-                            passage of
-                            Lorem
-                            Ipsum, you need to be sure
+                            <b>Field Force Consulting</b> — це:
+                            <br>Розвиток персоналу.
+                            <br>Комплексна експертиза.
+                            <br>Ефективні рішення.
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="info_form">
-                        <h5>
-                            NEWSLETTER
-                        </h5>
-                        <form action="">
-                            <input type="text" placeholder="Enter Your Email"/>
-                            <button type="submit">
-                                Subscribe
-                            </button>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
+
+                <div class="col">
                     <div class="info_detail">
                         <h5>
-                            Services
+                            КОНТАКТИ
                         </h5>
                         <p>
-                            Randomised words which don't look even slightly believable. If you are going to use a
-                            passage of
-                            Lorem
-                            Ipsum, you need to be sure
+                            ТОВ "ФІЛД ФОРС КОНСАЛТИНГ"
                         </p>
+                        <p>
+                            Київ, Україна, 02095, вул. Княжий Затон, 9А, офіс 369.
+                        </p>
+                        <a href="tel:+380994218007">
+                            +38(099) 421 80 07
+                        </a>
+                        <a href="mailto:m.gronskaya@fieldforce.consulting">
+                            <span>m.gronskaya@fieldforce.consulting</span>
+                        </a>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-6">
+
+
+                <div class="col">
                     <div class="">
                         <h5>
-                            Useful links
+                            Сайт
                         </h5>
                         <ul class="info_menu">
                             <li>
                                 <a href="index.html">
-                                    Home
+                                    Головна
                                 </a>
                             </li>
                             <li>
                                 <a href="about.html">
-                                    About
+                                    Наші послуги
                                 </a>
                             </li>
                             <li>
                                 <a href="clients.html">
-                                    Services
+                                    Наші клієнти
                                 </a>
                             </li>
                             <li>
                                 <a href="team.html">
-                                    Team
+                                    Команда
                                 </a>
                             </li>
                             <li class="mb-0">
                                 <a href="contact.html">
-                                    Contact Us
+                                    Контакти
                                 </a>
                             </li>
                         </ul>
@@ -321,9 +284,7 @@
         integrity="sha256-Zr3vByTlMGQhvMfgkQ5BtWRSKBGa2QlspKYJnkjZTmo=" crossorigin="anonymous"></script>
 <!-- custom js -->
 <script src="js/custom.js"></script>
-<!-- Google Map -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
-<!-- End Google Map -->
+
 </body>
 
 </html>
