team and clients. edited info section at all pages

--- a/finter-html/about.html
+++ b/finter-html/about.html
@@ -257,6 +257,86 @@
     </div>
 </section>
 
+<!-- end info_section --><!-- info section -->
+<section class="info_section ">
+    <div class="container">
+
+        <div class="info_bottom">
+            <div class="row">
+                <div class="col-md-4 col-sm-12">
+                    <div class="info_detail">
+                        <h5>
+                            Про компанію
+                        </h5>
+                        <p>
+                            <b>Field Force Consulting</b> — це:
+                            <br>Розвиток персоналу.
+                            <br>Комплексна експертиза.
+                            <br>Ефективні рішення.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-12">
+                    <div class="info_detail">
+                        <h5>
+                            КОНТАКТИ
+                        </h5>
+                        <p>
+                            ТОВ "ФІЛД ФОРС КОНСАЛТИНГ"
+                        </p>
+                        <p>
+                            Київ, Україна, 02095, вул. Княжий Затон, 9А, офіс 369.
+                        </p>
+                        <a href="tel:+380994218007">
+                            +38(099) 421 80 07
+                        </a>
+                        <a href="mailto:m.gronskaya@fieldforce.consulting">
+                            <span>m.gronskaya@fieldforce.consulting</span>
+                        </a>
+                    </div>
+                </div>
+
+
+                <div class="col-md-4 col-sm-12">
+                    <div class="">
+                        <h5>
+                            Сайт
+                        </h5>
+                        <ul class="info_menu">
+                            <li>
+                                <a href="index.html">
+                                    Головна
+                                </a>
+                            </li>
+                            <li>
+                                <a href="about.html">
+                                    Наші послуги
+                                </a>
+                            </li>
+                            <li>
+                                <a href="clients.html">
+                                    Наші клієнти
+                                </a>
+                            </li>
+                            <li>
+                                <a href="team.html">
+                                    Команда
+                                </a>
+                            </li>
+                            <li class="mb-0">
+                                <a href="contact.html">
+                                    Контакти
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!-- end info_section -->
 
 <!-- footer section -->
