--- a/finter-html/contact.html
+++ b/finter-html/contact.html
@@ -113,16 +113,18 @@
 </div>
 
 <!-- contact section -->
-<section class="contact_section ">
+<section class="contact_section layout_padding">
     <div class="container">
-
-        <h1 style="font-weight: bold; font-size: 2rem; padding-top: 30px; text-align: center">
-            Контакти</h1>
+        <div class="heading_container heading_center">
+            <h1>
+                Контакти
+            </h1>
+        </div>
 
         <div class="container text-center">
             <div class="row">
                 <div class="col-sm-12 col-md-5">
-                    <img style="padding: 20px 0 60px 0" src="./images/logo.png" alt="logo">
+                    <img style="padding: 0 0 60px 0" src="./images/logo.png" alt="logo">
                     <p>
                         <strong>ТОВ "ФІЛД ФОРС КОНСАЛТИНГ"</strong>
                     </p>
@@ -141,9 +143,8 @@
 
                 <div class="col-sm-12 col-md-7">
                     <div class="form_container">
-                        <div class="heading_container heading_center">
-                            <h4>Написати нам</h4>
-                        </div>
+                            <h2 class="md mt-3">Написати нам</h2>
+                            <p class="pb-2">Ми відкриті для питань і уточнень</p>
                         <form action="">
                             <div class="form-row">
                                 <div class="form-group col">
@@ -175,9 +176,8 @@
                 </div>
             </div>
         </div>
-
     </div>
-
+</section>
 
     <!--Map-->
     <div class="container-fluid">
@@ -185,11 +185,11 @@
             <div class="col map">
                 <iframe class="map"
                         src="https://www.google.com/maps/d/u/0/embed?mid=1Teb6LQQ4XvvEBqw7Jxmj1bKKS5K51Xc&ehbc=2E312F"
-                        height="400px"></iframe>
+                        height="500px"></iframe>
             </div>
         </div>
     </div>
-</section>
+
 <!-- end contact section -->
 
 <!-- info section -->
@@ -198,7 +198,7 @@
 
         <div class="info_bottom">
             <div class="row">
-                <div class="col">
+                <div class="col-md-4 col-sm-12">
                     <div class="info_detail">
                         <h5>
                             Про компанію
@@ -212,7 +212,7 @@
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-md-4 col-sm-12">
                     <div class="info_detail">
                         <h5>
                             КОНТАКТИ
@@ -233,7 +233,7 @@
                 </div>
 
 
-                <div class="col">
+                <div class="col-md-4 col-sm-12">
                     <div class="">
                         <h5>
                             Сайт
