--- a/finter-html/index.html
+++ b/finter-html/index.html
@@ -662,7 +662,7 @@
 
         <div class="info_bottom">
             <div class="row">
-                <div class="col">
+                <div class="col-md-4 col-sm-12">
                     <div class="info_detail">
                         <h5>
                             Про компанію
@@ -676,7 +676,7 @@
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-md-4 col-sm-12">
                     <div class="info_detail">
                         <h5>
                             КОНТАКТИ
@@ -697,7 +697,7 @@
                 </div>
 
 
-                <div class="col">
+                <div class="col-md-4 col-sm-12">
                     <div class="">
                         <h5>
                             Сайт
